# cloudray-agent

./: CHANGELOG.md  Cargo.toml  LICENCE.md  README.md  build.rs  install.sh  latest.txt  uninstall.sh
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-test.yml  clippy.yml  lint-pr.yml  release-binaries.yml  release-plz-pr.yml  release-plz-release.yml
pb/: A2o.proto  O2a.proto
scripts/: gen-pb.sh  update-latest-txt.sh
src/: args.rs  config.rs  daemonise.rs  device_uid.rs  experiment_talk_api.rs  experiment_ws.rs  machine_name.rs  main.rs  message_queue.rs  panic_error.rs  start.rs  types.rs  utils.rs  version.rs
src/cable/: request.rs  response.rs
src/config/: args.rs  config.rs  global_env_file.rs  mod.rs
src/install/: common.rs  service.rs
src/net/: handshake.rs  mod.rs  receive.rs  talk.rs
src/o2a_messages/: auth_result.rs  mod.rs  process_auth_result.rs  run_runlog.rs  runlog_run.rs
src/os/: mod.rs
src/os/linux/: service.rs
src/os/mac/: service.rs
src/os/wrapper/: mod.rs
src/tasks/: metrics.rs  mod.rs  report.rs
