[package]
name = "cloudray-agent"
version = "0.0.1"
edition = "2021"
rust-version = "1.83.0"
license = "MIT"
repository = "https://github.com/cloudray-io/cloudray-agent"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.27", features = ["derive", "env"] }
daemonize = "0.5.0"
futures = "0.3.31"
gethostname = "1.0.0"
pty-process = { version = "0.5.1", features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
