[package]
name = "cloudray-agent"
version = "0.0.5"
edition = "2024"
rust-version = "1.85.0"
description = "Agent for CloudRay, a server management & monitoring service. Learn more at https://cloudray.io"
license = "MIT"
repository = "https://github.com/cloudray-io/cloudray-agent"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.35", features = ["derive", "env"] }
futures = "0.3.31"
mac_address = "1.1.8"
prost = "0.13.5"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "rustls-tls-native-roots"] }
semver = "1.0.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webterm-core = "0.2.5"
sysinfo = "0.34.2"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
serial_test = "3.2.0"
